# python-project-52

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
task_manager/: mixins.py  settings.py  urls.py  views.py
task_manager/fixtures/: test_label.json  test_status.json  test_task.json  test_user.json
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: filter.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_label.py  0003_alter_task_label.py  0004_rename_label_task_labels.py
task_manager/templates/: base.html  form.html  index.html  login.html
task_manager/templates/labels/: label_delete.html  label_list.html
task_manager/templates/statuses/: status_delete.html  status_list.html
task_manager/templates/tasks/: task_delete.html  task_detail.html  task_list.html
task_manager/templates/users/: user_delete.html  user_list.html
task_manager/users/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py  0002_remove_user_second_name_alter_user_first_name.py
