[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=2.3.0",
    "django>=5.1.4",
    "django-bootstrap5>=24.3",
    "pip>=24.3.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
]
